--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ server.servlet.encoding.force-response=true
 # h2 DB, \uC6F9 \uCF58\uC194 \uC811\uADFC \uD5C8\uC6A9
 spring.h2.console.enabled=true
 
+# JPA \uB85C\uAE45 \uC124\uC815
+logging.level.org.hibernate.SQL=debug
+
+# \uC608\uC058\uAC8C \uBCF4\uC5EC\uC8FC\uAE30 \uC124\uC815
+spring.jpa.properties.hibernate.format_sql=true
+
+# \uD30C\uB77C\uBBF8\uD130 \uBCF4\uC5EC\uC8FC\uAE30
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
